# Veri-Train

./: .env.example  .gitignore  Dockerfile  MOCK_DATA_TEST.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_mock_api.sh
alembic/: env.py
app/: config.py  database.py  main.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: datasets.py  evaluations.py  experiments.py  models.py  reports.py  settings.py
app/models/: __init__.py  base.py  dataset.py  evaluation.py  experiment.py  model.py  report.py  user.py
app/schemas/: common.py  dataset.py  evaluation.py  experiment.py  model.py  report.py  settings.py
app/services/: model_service.py
app/tasks/: celery_app.py  evaluation.py  generation.py  quality_gate.py  training.py
scripts/: init_db.py
